src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600&display=swap');

html,
body {
  font-family: 'Inter', sans-serif;
  font-weight: 400;

  /* Hide scroll bar */
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* Internet Explorer 10+ */
  position: relative;
}

/* Hide scroll bar */
body::-webkit-scrollbar {
  width: 0;
  height: 0;
  display: none;
}

/* Prevent scroll when modal is open on ios */
body.modal-open {
  overflow-y: hidden;
  touch-action: none;
  -ms-touch-action: none;
}

.touch-scroll {
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

